--- a/web/package.json
+++ b/web/package.json
@@ -47,7 +47,7 @@
     "@babel/core": "^7.24.5",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.24.5",
-    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-react": "^7.24.1",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@types/jest": "^29.5.12",
@@ -57,7 +57,10 @@
     "cypress": "^13.7.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
-    "jest": "^29.7.0"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-transform-stub": "^2.0.0",
+    "react-router-dom": "^6.23.1"
   },
   "author": "",
   "license": "ISC",
