--- a/web/package.json
+++ b/web/package.json
@@ -46,8 +46,8 @@
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "^7.24.5",
-    "@babel/preset-react": "^7.24.1",
+    "@babel/preset-env": "^7.24.6",
+    "@babel/preset-react": "^7.24.6",
     "@babel/preset-typescript": "^7.24.1",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
@@ -86,5 +86,10 @@
     "minimist": "1.2.8",
     "react-country-flag": "^3.1.0",
     "react-date-range": "^2.0.0-alpha.4"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
   }
 }
