--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-community/blur": "^4.4.0",
+    "@react-native-community/checkbox": "^0.5.17",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.8",
     "aws-amplify": "^5.3.18",
