--- a/web/package.json
+++ b/web/package.json
@@ -78,6 +78,7 @@
     ]
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "axios": "^1.7.2",
     "country-data": "^0.0.31",
