--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^5.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-paper": "^5.12.3",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "react-resizable": "^3.0.5"
   }
 }
