--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-paper": "^5.12.3",
     "react-native-vector-icons": "^10.0.3",
-    "react-resizable": "^3.0.5"
+    "react-resizable": "^3.0.5",
+    "string-similarity": "^4.0.4"
   }
 }
