--- a/web/package.json
+++ b/web/package.json
@@ -56,6 +56,7 @@
     "babel-jest": "^29.7.0",
     "babel-preset-react-app": "^10.0.1",
     "cypress": "^13.7.2",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "identity-obj-proxy": "^3.0.0",
