--- a/web/package.json
+++ b/web/package.json
@@ -98,7 +98,8 @@
     "react-country-flag": "^3.1.0",
     "react-date-range": "^2.0.0-alpha.4",
     "react-load-script": "^0.0.6",
-    "react-resizable": "^3.0.5"
+    "react-resizable": "^3.0.5",
+    "string-similarity": "^4.0.4"
   },
   "jest": {
     "moduleNameMapper": {
