--- a/web/package.json
+++ b/web/package.json
@@ -86,6 +86,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "axios": "^1.7.2",
+    "browser-image-compression": "^2.0.2",
     "chart.js": "^4.4.3",
     "country-data": "^0.0.31",
     "date-fns": "^3.6.0",
