--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,7 @@
     "react-date-range": "^2.0.0-alpha.4",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.23.1",
@@ -82,6 +82,7 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
@@ -92,14 +93,17 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "fontawesome": "^5.6.3",
+    "graphql": "^16.9.0",
     "immer": "^10.0.4",
     "jest-environment-jsdom": "^29.7.0",
     "minimist": "1.2.8",
     "react-chartjs-2": "^5.2.0",
     "react-country-flag": "^3.1.0",
     "react-date-range": "^2.0.0-alpha.4",
+    "react-gauge-chart": "^0.5.1",
     "react-load-script": "^0.0.6",
     "react-resizable": "^3.0.5",
+    "recharts": "^2.12.7",
     "string-similarity": "^4.0.4"
   },
   "jest": {
