--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aws-amplify": "^5.3.18",
     "aws-amplify-react-native": "^7.0.8",
     "axios": "^1.6.8",
+    "browser-image-compression": "^2.0.2",
     "chart.js": "^4.4.3",
     "lodash": "^4.17.21",
     "react-icons": "^5.0.1",
