--- a/web/package.json
+++ b/web/package.json
@@ -100,6 +100,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-country-flag": "^3.1.0",
     "react-date-range": "^2.0.0-alpha.4",
+    "react-draggable": "^4.4.6",
     "react-gauge-chart": "^0.5.1",
     "react-load-script": "^0.0.6",
     "react-resizable": "^3.0.5",
