--- a/web/package.json
+++ b/web/package.json
@@ -106,7 +106,9 @@
     "react-load-script": "^0.0.6",
     "react-markdown": "^9.0.1",
     "react-resizable": "^3.0.5",
+    "react-slick": "^0.30.2",
     "recharts": "^2.12.7",
+    "slick-carousel": "^1.8.1",
     "string-similarity": "^4.0.4"
   },
   "jest": {
