--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.5",
     "ip": "^2.0.1",
     "lodash": "^4.17.21",
+    "node-fetch": "^3.3.2",
     "react-icons": "^5.3.0",
     "react-load-script": "^0.0.6",
     "react-native-elements": "^3.4.3",
