--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "amplify": "^0.0.11",
     "aws-amplify": "^5.3.12",
-    "aws-sdk": "^2.1571.0",
+    "aws-sdk": "^2.1692.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "jest": "^27.5.1",
@@ -102,6 +102,7 @@
     "immer": "^10.0.4",
     "jest-environment-jsdom": "^29.7.0",
     "minimist": "1.2.8",
+    "multiparty": "^4.2.3",
     "node-fetch": "^3.3.2",
     "nth-check": "^2.1.1",
     "path-to-regexp": "^8.2.0",
