--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/stack": "^6.3.25",
     "aws-amplify": "^6.7.0",
     "aws-sdk": "^2.1613.0",
+    "date-fns": "^4.1.0",
     "openai": "^4.32.0",
     "react": "18.2.0",
     "react-native": "^0.73.10",
