--- a/web/package.json
+++ b/web/package.json
@@ -25,10 +25,10 @@
     "react-modal": "^3.16.1",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
-    "router": "^2.0.0",
+    "router": "^1.3.8",
     "stripe": "^14.14.0",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
@@ -109,7 +109,6 @@
     "nth-check": "^2.1.1",
     "path-to-regexp": "^8.2.0",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^2.14.305",
     "react-chartjs-2": "^5.2.0",
     "react-country-flag": "^3.1.0",
     "react-date-range": "^2.0.0-alpha.4",
