--- a/web/package.json
+++ b/web/package.json
@@ -109,6 +109,7 @@
     "nth-check": "^2.1.1",
     "path-to-regexp": "^8.2.0",
     "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^2.14.305",
     "react-chartjs-2": "^5.2.0",
     "react-country-flag": "^3.1.0",
     "react-date-range": "^2.0.0-alpha.4",
