--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -1,11 +1,11 @@
 {
   "short_name": "Domits",
-  "name": "Domits - Holiday rentals, campers, boats and more...",
+  "name": "Create React App Sample",
   "icons": [
     {
-      "src": "logo192.png",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/png"
+      "type": "image/x-icon"
     },
     {
       "src": "logo192.png",
@@ -13,7 +13,7 @@
       "sizes": "192x192"
     },
     {
-      "src": "logo192.png",
+      "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
