--- a/web/package.json
+++ b/web/package.json
@@ -25,10 +25,10 @@
     "react-modal": "^3.16.1",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
-    "router": "^1.3.8",
+    "router": "^2.0.0",
     "stripe": "^14.14.0",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
