--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -25,6 +25,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^11.3.2",
     "@react-native-picker/picker": "^2.7.0",
+    "@react-native-voice/voice": "^3.1.5",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
@@ -41,6 +42,8 @@
     "react-native-camera": "^4.2.1",
     "react-native-document-picker": "^9.3.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.12.4",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.4.0",
@@ -52,7 +55,11 @@
     "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^4.3.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-share": "^12.0.3",
+    "react-native-snap-carousel": "^1.3.1",
+    "react-native-sound": "^0.11.2",
+    "react-native-vector-icons": "^10.0.3",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
