--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -59,6 +59,7 @@
     "react-native-snap-carousel": "^1.3.1",
     "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-voice": "^0.3.0",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
