--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,7 @@
     "react-date-range": "^2.0.0-alpha.4",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-modal": "^3.16.1",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.23.1",
@@ -117,6 +117,7 @@
     "react-markdown": "^9.0.1",
     "react-resizable": "^3.0.5",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.15.0",
     "react-twitter-embed": "^4.0.4",
     "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
