--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       # Install NPM dependencies, cache them correctly
       - name: Install dependencies
         run: |
-          cd web
+          cd web/src
           npm ci --verbose
 
       # Run your Cypress tests
