--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,14 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    env:
+      REACT_APP_GOOGLE_MAPS_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAPS_API_KEY }}  # Moved here
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-    # Install NPM dependencies, cache them correctly
+      # Install NPM dependencies, cache them correctly
       - name: Install dependencies
         run: |
           cd web/src
@@ -30,6 +33,14 @@ jobs:
       - name: Run Jest tests
         run: |
           cd web/src
-          npm test  -- --detectOpenHandles
-env:
-  REACT_APP_GOOGLE_MAPS_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAPS_API_KEY }}     
+          npm test -- --detectOpenHandles
+
+      # Check for .env (secrets) files
+      - name: Check for .env files
+        run: |
+          if find . -name "*.env" -print | grep -q '.env'; then
+            echo "❌ .env file(s) found! Please remove them from the repository."
+            exit 1  # Correctly aligned
+          else
+            echo "✅ No .env files found."
+          fi
