--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-node_modules
+# Node modules
+node_modules/
 
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
@@ -10,7 +11,6 @@ amplify/backend/amplify-meta.json
 amplify/backend/.temp
 build/
 dist/
-node_modules/
 aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
@@ -21,4 +21,16 @@ amplifytools.xcconfig
 .secret-*
 **.sample
 #amplify-do-not-edit-end
+
+# Don't add .env (secret key) files:
+.env
+.env.*
+*.env
+
+# IDE and Editor
+.idea/
+.idea/*
+.idea/sonarlint/
+.vscode/
+app/.idea/
 
